force-app/main/default/objects/StockX_Sale__c/StockX_Sale__c.object-meta.xml
<CustomObject>
    <description>This object represents a sale on the StockX platform.</description>
    <label>StockX Sale</label>
    <nameField>
        <displayFormat>SXS-{0}</displayFormat>
        <label>StockX Sale Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StockX Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>