force-app/main/default/objects/StockX_Sale__c/fields/Buyer_Region__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Region__c</fullName>
    <description>The State/Region of the buyer.</description>
    <inlineHelpText>The State/Region of the buyer.</inlineHelpText>
    <label>Buyer Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>