force-app/main/default/objects/StockX_Sale__c/fields/Number_of_Days_Listed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Listed__c</fullName>
    <description>The number of days the sneaker was on the market.</description>
    <formula>Order_Date__c -  Release_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days the sneaker was on the market.</inlineHelpText>
    <label>Number of Days Listed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>