force-app/main/default/objects/StockX_Sale__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>The date the order was processed on the StockX Platform.</description>
    <inlineHelpText>The date the order was processed on the StockX Platform.</inlineHelpText>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>