force-app/main/default/objects/StockX_Sale__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <description>The profit the seller made on the sale.</description>
    <formula>Sale_Price__c -  Retail_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The profit the seller made on the sale.</inlineHelpText>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>