force-app/main/default/objects/StockX_Sale__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>The date of the initial sneaker release.</description>
    <inlineHelpText>The date of the initial sneaker release.</inlineHelpText>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>