force-app/main/default/objects/StockX_Sale__c/fields/Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Retail_Price__c</fullName>
    <description>The initial retail price of the sneaker.</description>
    <inlineHelpText>The initial retail price of the sneaker.</inlineHelpText>
    <label>Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>