force-app/main/default/objects/StockX_Sale__c/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <description>The price the shoe was sold for.</description>
    <inlineHelpText>The price the shoe was sold for.</inlineHelpText>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>