force-app/main/default/objects/StockX_Sale__c/fields/Shoe_Size__c.field-meta.xml
<CustomField>
    <fullName>Shoe_Size__c</fullName>
    <description>The size of the sneaker.</description>
    <inlineHelpText>The size of the sneaker.</inlineHelpText>
    <label>Shoe Size</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>