force-app/main/default/objects/StockX_Sale__c/fields/Sneaker__c.field-meta.xml
<CustomField>
    <fullName>Sneaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The type of sneaker sold.</description>
    <inlineHelpText>The type of sneaker sold.</inlineHelpText>
    <label>Sneaker</label>
    <referenceTo>Sneaker__c</referenceTo>
    <relationshipLabel>StockX Sales</relationshipLabel>
    <relationshipName>StockX_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>