force-app/main/default/objects/StockX_Sale__c/fields/Sneaker_Brand__c.field-meta.xml
<CustomField>
    <fullName>Sneaker_Brand__c</fullName>
    <description>The brand of the sneaker that was sold.</description>
    <inlineHelpText>The brand of the sneaker that was sold.</inlineHelpText>
    <label>Sneaker Brand</label>
    <referenceTo>Sneaker_Brand__c</referenceTo>
    <relationshipLabel>StockX Sales</relationshipLabel>
    <relationshipName>StockX_Sales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>