force-app/main/default/objects/StockX_Sale__c/fields/Sneaker_Name__c.field-meta.xml
<CustomField>
    <fullName>Sneaker_Name__c</fullName>
    <description>The name of the sneaker that was sold.</description>
    <inlineHelpText>The name of the sneaker that was sold.</inlineHelpText>
    <label>Sneaker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>